tests/errors/preprocessor/not_working/extra_endif.c
#endif 

#ENDIF

void main()
{
#if 1 == 1
    print(1);
#endif #endif print(2);
    print(3); 
}
